# lalala

./: Makefile  Makefile.common.mk  README.md  lalala.opam
.github/: CODEOWNERS
.github/workflows/: main.yml
Hanoi/: .gitignore  Hanoi.ml2mk.ml  HanoiD.ml  Makefile
Topsort/: Makefile  Topsort.ml  Topsort.ml2mk.ml  TopsortD.ml  g.dot
WaterPuzzle/: Makefile  WaterPuzzle.ml2mk.ml  WaterPuzzleD.ml
